--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-\<!DOCTYPE html>
+<!DOCTYPE html> <!-- always the first tag -->
 <html lang="en">
 
-<head>
-	 <link rel="shortcut icon" href="favicon.ico">
+<head> <!-- problem with displaying .ico file exported as png into the root  still not sure why it wasn't displaying otherwise.  We were able to display using a url and a .ico -->
+	 <link rel="shortcut icon" href="favicon.png">
 	  <meta charset="UTF-8">
 	<title>my google replica</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
